--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         <div id="opacidade" class="fechar"></div>
         <div>
             <div class="container containerFinalizar">
-                <a class="voltar" href="../index.html" title="Voltar"><i class="fa-solid fa-chevron-left"></i>
+                <a class="voltar" href="https://compraseguraonline.org.ua/c/5bb912b80d" title="Voltar"><i class="fa-solid fa-chevron-left"></i>
                     VOLTAR</a>
                 <div id="detalhesProduto">
                     <div class="info1">
