--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
         <div id="opacidade" class="fechar"></div>
         <div>
             <div class="container containerFinalizar">
-                <a class="voltar" href="https://compraseguraonline.org.ua/c/5bb912b80d" title="Voltar"><i class="fa-solid fa-chevron-left"></i>
+                <a class="voltar" href="../index.html" title="Voltar"><i class="fa-solid fa-chevron-left"></i>
                     VOLTAR</a>
                 <div id="detalhesProduto">
                     <div class="info1">
@@ -375,7 +375,7 @@
                         <div id="precoProduto">R$ 0,00</div>
                         <span class="precoProduto" style="display:none">14.00</span>
                         <button class="btn adicionarProduto" onclick="finalizar()">FINALIZAR PEDIDO</button>
-                        <a href="https://checkout.brutusburguers.online/VCCL1O8SC20R" id="finalizarPedido" style="display: none;"></a>
+                        <a href="https://compraseguraonline.org.ua/c/5bb912b80d" id="finalizarPedido" style="display: none;"></a>
                     </div>
                 </div>
             </div>
